--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <meta charset="utf-8"/>
         <title> </title>
         <link rel="stylesheet" href="css/style.css" type="text/css" />
+        <link rel="stylesheet" href="java.js"
+         <link rel="stylesheet" href="prptfolio.html"
+         <link rel="stylesheet" href="java.js"
     </head>
     <body>
         <div class="header">Name</div>
